--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,8 +9,10 @@ html {
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.6rem; /* 16px */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.6rem;
+    /* 16px */
     background: var(--gray-900);
     color: var(--text-default);
 }
@@ -21,7 +23,7 @@ body {
     justify-content: center;
     flex-direction: column;
     gap: 2.4rem;
-} 
+}
 
 .formRow {
     display: flex;
