--- a/src/pages/History/styles.module.css
+++ b/src/pages/History/styles.module.css
@@ -1,7 +1,8 @@
 .buttonContainer button {
   min-width: auto;
-  margin: 0;
+  margin: 1rem;
   padding: 1rem;
+  justify-content: auto;
 }
 
 .buttonContainer button svg {
@@ -34,4 +35,13 @@
   border-bottom: 0.2rem solid var(--gray-700);
   text-align: left;
   padding: 1.6rem;
+}
+
+.thSort {
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.thSort:hover {
+  filter: brightness(80%);
 }
